* 0.7.0svn - ... - release 26/11/2009
- Fix external plugins on python 2.2 and older (eg. RHEL3)
- Documentation improvements
- Implement linecache for top-plugins (caching for statistics)
- Added external dstat_qmail plugin to show the length of qmail queues (Tom Van Looy)

* 0.7.0 - Tokyo - release 25/11/2009
- Fixed dstat_disk plugin for total calculation on 2.6.25+ kernels (Noel J. Bergman)
- Precompile regular expressions used as a disk filter (self.diskfilter)
- Raise a warning when discovery returns empty
- Improvements to dstat_battery and dstat_cpufreq
- Added external dstat_power plugin to show ACPI power usage
- Simplified logic inside dstat_time
- Added external dstat_ntp plugin to show time from an NTP server
- Flush sys.stdout later in the loop
- Filtering out more interfaces (eg. bonding) in total values (Bert de Bruijn)
- Provide error output when now power information is available (AC power)
- Make topcpu plugin SMP aware (values are not percent per CPU)
- Drop support for Python 1.5 (and removed dstat15 version)
- Introduced splitlines() function that allows a replace/split on readlines()
- Added external dstat_fan plugin to show fan speed
- Added theming support (not exposed to users yet)
- Added --bw/--blackonwhite option to use dark colors on white background
- Allow any plugin to be added by using long options (ie. --topbio)
- Added external dstat_memcache_hits plugin to show memcache hits and misses (Dean Wilson)
- Various changes to simplify plugin interface and performance improvements
- Added external dstat_proccount plugin to show total number of process (Dean Wilson)
- Added external dstat_vzio plugin to show I/O account number per OpenVZ container
- Added external dstat_battery_remain plugin to show how much battery time is remaining
- Added getnamebypid() function to simplify finding best process name by process id
- Added external dstat_toplatency plugin to show process with top wait time in milliseconds