@@ -3,6 +3,8 @@
 - Documentation improvements
 - Implement linecache for top-plugins (caching for statistics)
 - Added external dstat_qmail plugin to show the length of qmail queues (Tom Van Looy)
+- Added external dstat_dstat plugin to show Dstat's own cputime and latency values
+- Added --profile option to get profiling statistics when you exit dstat
 
 * 0.7.0 - Tokyo - release 25/11/2009
 - Fixed dstat_disk plugin for total calculation on 2.6.25+ kernels (Noel J. Bergman)
